--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set-option -g history-limit 25000
 set -g mouse on
 
+setw -g mode-keys vi
+
 # status bar
 set -g status-right "#(pomo)"
 set -g status-style "fg=#665c54"
