--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-# themes from https://github.com/alacritty/alacritty-theme
-import = ["~/.config/alacritty/themes/themes/github_dark.toml"]
-
 [font]
 size = 20
 
@@ -10,3 +7,7 @@ family = "UbuntuMono Nerd Font"
 [window.padding]
 x = 7
 y = 2
+
+[general]
+# themes from https://github.com/alacritty/alacritty-theme
+import = ["~/.config/alacritty/themes/themes/github_dark.toml"]
