fix: wsl alacritty toml

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 [font]
-size = 20
+size = 15
 
 [font.normal]
 family = "UbuntuMono Nerd Font"
@@ -10,4 +10,8 @@ y = 2
 
 [general]
 # themes from https://github.com/alacritty/alacritty-theme
-import = ["~/.config/alacritty/themes/themes/github_dark.toml"]
+import = ["\\wsl$\\Ubuntu\\home\\tgroven\\.config\\alacritty\\themes\\themes\\github_dark.toml"]
+
+[terminal.shell]
+program = "C:\\Windows\\System32\\wsl.exe"
+args = ["tmux"]
